--- a/src/components/FullScreenBanner.css
+++ b/src/components/FullScreenBanner.css
@@ -5,7 +5,7 @@
 
 #animation-section{
   background: black;
-  width: 100vw;
+  width: 100%;
   height: 95vh;
   overflow: hidden;
   max-height: 1028px;
