--- a/src/components/BannerOverlay.css
+++ b/src/components/BannerOverlay.css
@@ -1,6 +1,10 @@
 #animation-overlay-section{
   position: absolute;
   width: 100%;
-  height: 95vh;
+  height: 85vh;
   max-height: 1028px;
+}
+
+#overlay-content{
+  background-color: rgba(223, 68, 7, 0.7);
 }
